--- a/jeugdzorg/jeugdzorg/static/scss/partials/_icons.scss
+++ b/jeugdzorg/jeugdzorg/static/scss/partials/_icons.scss
@@ -388,19 +388,20 @@
 }
 
 .icon-ken-ik {
+  $shadowColor: lighten($textColor, 40);
   font-style: normal;
   position: relative;
   z-index: 1;
   display: inline-block;
   
-//  text-shadow: 1px 1px 0 $textColor,
-//               1px 0px 0 $textColor,
-//               1px -1px 0 $textColor,
-//               0px -1px 0 $textColor,
-//               0px 1px 0 $textColor,
-//               -1px 0px 0 $textColor,
-//               -1px -1px 0 $textColor,
-//               -1px 1px 0 $textColor;
+  text-shadow: 1px 1px 0 $shadowColor,
+               1px 0px 0 $shadowColor,
+               1px -1px 0 $shadowColor,
+               0px -1px 0 $shadowColor,
+               0px 1px 0 $shadowColor,
+               -1px 0px 0 $shadowColor,
+               -1px -1px 0 $shadowColor,
+               -1px 1px 0 $shadowColor;
  
   &:before {
     content: '⭑';
