--- a/jeugdzorg/jeugdzorg/static/scss/partials/_ken-ik.scss
+++ b/jeugdzorg/jeugdzorg/static/scss/partials/_ken-ik.scss
@@ -17,7 +17,7 @@
     margin-right: 1em;
     background-color: $brandColor2;
     color: #fff;
-    padding: .4em .6em;
+    padding: .5em .6em;
     display: inline-block;
     white-space: nowrap;
     
@@ -25,11 +25,11 @@
     &:before {
       content: '';
       position: absolute;
-      z-index: -1;
-      right: .7em;
+      z-index: 1;
+      right: .9em;
       bottom: -.3em;
-      width: 1em;
-      height: 1em;
+      width: .6em;
+      height: .6em;
       background-color: $brandColor2;
       transform: rotate(45deg);
     }
@@ -62,11 +62,13 @@
   }
 }
 
+
 .regeling .ken-ik .icon-ken-ik {
   &:before {
     color: #fff;
   }
 }
+
 
 .regeling, .contact, .thema {
   .ken-ik {
@@ -86,4 +88,23 @@
       }
     }
   }
+}
+
+.contact .ken-ik {
+  top: auto;
+  bottom: 0;
+}
+.regeling-detail .ken-ik,
+.thema-detail .ken-ik {
+  float: right;
+  color: $brandColor2;
+  margin: -.6em 0 0 1em;
+  .icon-ken-ik {
+    &:before {
+      color: #fff;
+    }
+  }
+} 
+.thema-detail .ken-ik {
+  margin-top: -.4em;
 }
